 Bug 487209 - erroneous redeclaration of let ... with try {...} catch(e) {var e...} (r=mrbkap).